// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders Subtitle One 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 16,
      "letterSpacing": 0.15,
      "lineHeight": 16,
    }
  }
  type={1}
  typographyStyles={
    Object {
      "fontSize": 16,
      "letterSpacing": 0.15,
      "lineHeight": 16,
    }
  }
>
  Subtitle
</Text>
`;

exports[`it renders Subtitle One when a value isnt 1 or 2 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
    }
  }
  type={3}
>
  Subtitle
</Text>
`;

exports[`it renders Subtitle Two 1`] = `
<Text
  style={
    Object {
      "color": "rgba(0, 0, 0, 0.87)",
      "fontSize": 14,
      "fontWeight": "500",
      "letterSpacing": 0.1,
      "lineHeight": 14,
    }
  }
  type={2}
  typographyStyles={
    Object {
      "fontSize": 14,
      "fontWeight": "500",
      "letterSpacing": 0.1,
      "lineHeight": 14,
    }
  }
>
  Subtitle
</Text>
`;
